--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <meta name="twitter:description" content="Conheça nossa coleção de bonecas Baby Reborn e descubra os detalhes que as tornam únicas.">
         <meta name="twitter:image" content="https://www.dcjbabyreborn.com/assets/dcj-logo.jpg">
         <link rel="stylesheet" href="css/styles.css">
+        <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
